css/styles.css
@font-face {
    font-family: 'SwankGothic';
    src: url('SwankGothicBold.woff2') format('woff2'), url('SwankGothicBold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

* {
    /* background-color: #272727; */
    background-color: black;
    /* font-family: 'EB Garamond', serif; */
    /* font-family: 'Pinyon Script', cursive; */
    font-family: 'SwankGothic', Arial, sans-serif;
    /* font-family: 'Petit Formal Script', cursive; */
    /* font-family: 'Montserrat', sans-serif; */
    /* font-family: 'Pinyon Script', cursive; */
    /* font-family: 'Italianno', cursive; */
    font-family: 'SwankGothic';
    font-weight: bold;
    font-style: normal;
    padding: 0;
}

html, body {
    max-width: 100%;
    overflow-x: hidden;
    -ms-overflow-style: none; /* for Internet Explorer, Edge */
    scrollbar-width: none; /* for Firefox */
    overflow-y: scroll; 
    padding-bottom: -500px;
}

html::-webkit-scrollbar {
    display: none; /* for Chrome, Safari, and Opera */
}

body::-webkit-scrollbar {
    display: none; /* for Chrome, Safari, and Opera */
}


.artistName {
    color: whitesmoke;
    text-align: left;
    font-size: 40px;
    display: inline;
    width: 100%;
}

.genre {
    color: whitesmoke;
    text-align: center;
    font-size: 40px;
    display: block;
    width: 100%;
}

.artistName div {
    width: 100%;
    margin-left: 0;
    display: inline;
}

.artistName .links {
    display: inline;
}

#header {
    padding-top: 28vh;
    padding-bottom: 30vh;
    /* padding-top: 25vh;
    padding-bottom: 25vh; */
    /* z-index: -1; */
}

/* #footer { */

/* margin-top: -2vh; */

/* padding-top: 40vh;
    padding-bottom: 40vh; */

/* padding-bottom: 25vh; */

/* z-index: -1; */

/* } */

#tinyFooter {
    /* padding-bottom: 0; */
    padding-top: 35vh;
    padding-bottom: 35vh;
}

#blockFooter {
    width: 100px;
    max-width: 25vw;
}

img:hover {
    cursor: pointer;
}

section img {
    height: 95vh;
    margin: 0 -1% 1% 0;
    width: 177.777%;
}

.mini {
    /* height: 30vh;
    
    max-width: 150px;
    min-width: 66%; */
    /* margin-left: 0;
    margin-right: auto;
    max-height: 400px; */
    margin-left: 0;
    margin-right: auto;
    width: 100%;
    max-height: 400px;
    /* margin-top: -75vw; */
}

img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 33%;
    min-width: 450px;
    z-index: 0;
    object-fit: cover;
}

.bio {
    margin: auto;
    width: 80%;
    height: 80px;
    /* margin-right: -30vw; */
}

a {
    color: whitesmoke;
}

.info, i {
    color: #EE1E3A;
}

i:hover {
    color: rgb(255, 189, 182);
    cursor: pointer;
}

.artist {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100vw;
    /* min-width: 450px; */
    z-index: 0;
}

.desc {
    display: none;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    text-align: center;
    /* min-width: 450px; */
    z-index: 1;
    margin-bottom: 20vh !important;
}

div {
    display: block;
    margin-left: auto;
    margin-right: auto;
    /* width: 33%;
    min-width: 500px; */
}

section {
    /* position: relative; */
    text-align: center;
    max-height: 98vh;
    padding-top: 1vh;
    padding-bottom: 1vh;
    overflow: hidden;
    width: 100%;
    margin: 0;
    min-height: 98vh;
    max-height: 98vh;
}

.links {
    color: whitesmoke;
    font-size: 45px;
}

#paully {
    font-size: 45px;
}

h5 {
    color: #EE1E3A;
    font-size: 50px;
    text-align: center;
}

@media only screen and (max-width: 1000px) {
    #paully {
        font-size: 4.5vw;
    }
    .links {
        font-size: 5vw;
    }
    .bio {
        margin: auto;
        width: 100% !important;
        height: 50px !important;
        /* margin-right: -30vw; */
    }
}

/* 768px is a common "breakpoint" width for tablets */

@media only screen and (max-width: 768px) {
    h1 {
        color: whitesmoke;
        text-align: center;
        margin-left: 2px;
        margin-right: 2px;
        font-size: calc(40px + 3vw);
        min-width: 300px;
        /* -webkit-animation: colorchange 25s infinite alternate; */
        animation-delay: 2s;
        font-style: italic;
    }
    img {
        display: block;
        width: calc(40% + 100px);
        min-width: 340px;
        max-width: 1200px;
    }
    div {
        display: block;
        margin-left: 0;
        min-width: 340px;
        max-width: 1200px;
    }
    /* #header { */
    /* padding-top: 38vh;
        padding-bottom: 38vh; */
    /* padding-top: 33vh;
        padding-bottom: 33vh; */
    /* } */
    #footer {
        padding-top: 41vh;
        padding-bottom: 41vh;
    }
    section {
        min-height: 98vh;
        max-height: 98vh;
        width: 100%;
        overflow: hidden;
    }
    section img {
        height: 98vh;
        margin: 0 -1% 1% 0;
        /* width: 177.777%; */
    }
    .mini {
        /* height: 30vh; */
        margin-left: 0;
        margin-right: auto;
        width: 100%;
        max-height: 400px;
        /* tex */
    }
    .artistName {
        font-size: 6vw;
        /* width: 66%; */
    }
    .genre {
        font-size: 6vw;
        /* width: 66%; */
    }
    .links {
        font-size: 5vw;
    }
    #baker {
        font-size: 5vw;
        /* width: 66%; */
    }
    #paully {
        font-size: 4vw;
    }
    .bio {
        margin: auto;
        width: 100% !important;
        height: 50px !important;
        /* margin-right: -30vw; */
    }
}

@media only screen and (max-height: 540px) {
    section {
        min-height: calc(50px + 120vh);
    }
}

/* @media only screen and (max-width: 450px) {
    h1 {
        color: whitesmoke;
        text-align: center;
        font-size: 40px;
        -webkit-animation: colorchange 25s infinite alternate;
        animation-delay: 2s;
        font-style: italic;
    }
    img, #contact, div, #store {
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 30%
    }
    #storeImg {
        width: 30%
    }
    h3, p {
        font-size: 22px;
    }
}

@media only screen and (max-width: 375px) {
    h1 {
        color: whitesmoke;
        text-align: center;
        font-size: 10vw;
        -webkit-animation: colorchange 25s infinite alternate;
        animation-delay: 2s;
        font-style: italic;
    }
    img, #contact, div, #store {
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 10%;
        min-width: 275px;
    }
    h3, p {
        font-size: 20px;
    }
}

@media only screen and (max-width: 320px) {
    h1 {
        color: whitesmoke;
        text-align: center;
        font-size: 11vw;
        -webkit-animation: colorchange 25s infinite alternate;
        animation-delay: 2s;
        font-style: italic;
    }
    img, #contact, div, #store {
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 10%;
        min-width: 275px;
    }
    h3, p {
        font-size: 18px;
    }
} */

